@startuml

' https://plantuml.com/class-diagram

hide empty members

package console {
    object AppReversiConsole
    class Command
    interface CommandContext
    class CommandException
    object Empty
    class GameInProgress
    class IllegalContext
    class InvalidParameters
    class LineCommand
    class Unknown
    class ReversiView

    AppReversiConsole --> Command
    AppReversiConsole --> LineCommand
    AppReversiConsole --> CommandContext
    AppReversiConsole --> CommandException
    Empty --|> CommandContext
    GameInProgress --|> CommandContext
    IllegalContext --|> CommandException
    InvalidParameters --|> CommandException
    InvalidParameters --> Command
    Unknown --|> CommandException
    Command --> CommandContext
    Command --> CommandException
}

package model {
    interface Game
    class Reversi
    class Clash
    class Coordinate
    enum Direction
    class Name
    enum PiecesColor
    class GameState
    class Win
    class Draw
    class Run
    class Pass

    Clash --> Coordinate
    Clash --|> Game
    Clash --> Name
    Clash --> PiecesColor
    Clash --> Reversi
    Game --> Coordinate
    Game --> Reversi
    Draw --|> GameState
    Pass --|> GameState
    Run --|> GameState
    Win --|> GameState
    Reversi --> Coordinate
    Reversi --> Direction
    Reversi --|> Game
    Reversi --> GameState
    Reversi --> PiecesColor

}

package storage {
    interface Storage
    interface Serializer
    class TextFileStorage
    class GameSerializer

    TextFileStorage --|> Storage
    GameSerializer --|> Serializer
    TextFileStorage --> Serializer
}

AppReversiConsole --> Name
AppReversiConsole --> Reversi
AppReversiConsole --> GameSerializer
AppReversiConsole --> TextFileStorage
GameInProgress --> Clash
GameInProgress --> Coordinate
GameInProgress --> Game
GameInProgress --> Reversi
Command --> Clash
Command --> Coordinate
Command --> Game
Command --> Name
Command --> PiecesColor
Command --> Reversi
ReversiView --> Coordinate
ReversiView --> GameState
ReversiView --> PiecesColor
ReversiView --> Reversi


Clash --> Storage
Win --> PiecesColor
Pass --> PiecesColor

GameSerializer --> Coordinate
GameSerializer --> GameState
GameSerializer --> PiecesColor
GameSerializer --> Reversi

@enduml